# stripe-test

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
core/: settings.py  urls.py
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_discount_tax_item_currency_order_orderitem_and_more.py  0003_order_session_key.py  0004_discount_is_active_discount_min_items_count_and_more.py
templates/: base.html  cancel.html  success.html
templates/payments/: cancel.html  item_detail.html  item_list.html  order_detail.html  order_list.html  success.html
