[tool.poetry]
name = "stripe-test"
version = "0.1.0"
description = ""
authors = ["kioharu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
django = "5.2"
stripe = "12.1.0"
psycopg = { extras = ["c"], version = "3.2.4" }
gunicorn = { extras = ["gevent"], version = "23.0.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
atomic = true
profile = "black"
py_version = 311
line_length = 88
skip_gitignore = true
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
